--- a/ch01-datastructures/01_01_loops.ipynb
+++ b/ch01-datastructures/01_01_loops.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,14 +23,31 @@
     "import pandas as pd\n",
     "\n",
     "# We also import the simpler command-oriented interface to matplotlib, pyplot\n",
-    "import matplotlib.pyplot as pp  "
+    "import matplotlib.pyplot as pp"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n",
+      "6\n",
+      "7\n",
+      "8\n",
+      "9\n"
+     ]
+    }
+   ],
    "source": [
     "for i in range(0, 10):\n",
     "    print(i)"
@@ -38,9 +55,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n"
+     ]
+    }
+   ],
    "source": [
     "for i in range(5):\n",
     "    print(i)"
@@ -48,9 +77,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "2\n",
+      "4\n",
+      "6\n",
+      "8\n"
+     ]
+    }
+   ],
    "source": [
     "for i in range(0, 10, 2):\n",
     "    print(i)"
@@ -58,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -141,7 +182,7 @@
     "            for amount_10 in range(0, 100+1, 10):\n",
     "                for amount_5 in range(0, 100+1, 5):\n",
     "                    total_so_far = amount_100 + amount_50 + amount_25 + amount_10 + amount_5\n",
-    "                    \n",
+    "\n",
     "                    if total_so_far <= 100:\n",
     "                        combinations_amounts.append([amount_100, amount_50, amount_25, amount_10, amount_5,\n",
     "                                                     100 - total_so_far])"
@@ -162,7 +203,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "len(combinations_amounts) "
+    "len(combinations_amounts)"
    ]
   },
   {
@@ -186,7 +227,7 @@
     "                        if total_so_far <= total:\n",
     "                            combinations_amounts.append([amount_100, amount_50, amount_25, amount_10, amount_5,\n",
     "                                                         total - total_so_far])\n",
-    "    \n",
+    "\n",
     "    return combinations_amounts"
    ]
   },
@@ -230,7 +271,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -244,7 +285,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.8"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
