worked on the coding challenge and modified the docx file

--- a/ch02-anagrams/02_03_finding.ipynb
+++ b/ch02-anagrams/02_03_finding.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -134,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -144,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1181,7 +1181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2214,7 +2214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2243,7 +2243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -2252,7 +2252,7 @@
        "{'phyton', 'python'}"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2263,11 +2263,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def find_anagram(word):    \n",
+    "def find_anagram(word):\n",
     "    return anagrams_by_signature[signature(word)]"
    ]
   },
@@ -2315,7 +2315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2348,7 +2348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -3357,7 +3357,7 @@
        " ...]"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3368,7 +3368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -4377,7 +4377,7 @@
        " ...]"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4388,7 +4388,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -5460,7 +5460,7 @@
        " ...]"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5471,11 +5471,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#for curly braces - option + 8 for {}, option + 9 for }\n",
+    "#for curly braces - option + 8 for {}, option + 9 for } in mac\n",
     "import itertools\n",
     "\n",
     "def palindromes(anagrams_by_signature):\n",
@@ -5483,18 +5483,36 @@
     "    palindromes = []\n",
     "    for value in anagrams_by_signature.values():\n",
     "        for word1, word2 in itertools.combinations(value, 2):\n",
-    "            if word1 == word2[::-1]:\n",
+    "            if word1 == word2[::-1] and len(word1) >= 7:\n",
     "                palindromes.append({word1, word2})\n",
     "    return palindromes"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'amaroid', 'diorama'},\n",
+       " {'anacara', 'aracana'},\n",
+       " {'artamus', 'sumatra'},\n",
+       " {'dessert', 'tressed'},\n",
+       " {'leveler', 'relevel'},\n",
+       " {'redrawer', 'rewarder'},\n",
+       " {'rotanev', 'venator'}]"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "result = palindromes(anagrams_by_signature)"
+    "result = palindromes(anagrams_by_signature)\n",
+    "result"
    ]
   }
  ],
