--- a/ch04-weather/04_04_smoothing.ipynb
+++ b/ch04-weather/04_04_smoothing.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -189,7 +189,7 @@
     "    stationdata = getweather.getyear(station, ['TMIN','TMAX'], year)\n",
     "\n",
     "    # repeat for TMIN and TMAX\n",
-    "    for obs in ['TMIN','TMAX']:   \n",
+    "    for obs in ['TMIN','TMAX']:\n",
     "        # fill NaNs and smooth\n",
     "        data = smooth(fillnans(stationdata[obs]), 20)\n",
     "        # plot, setting x to the post-smoothing range\n",
@@ -228,7 +228,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -242,7 +242,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.2"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
